tests failed because ther eis no output from main.py. instead test will use --url command and look for the generated filename.

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -33,11 +33,12 @@ jobs:
         python -c "import main; print('Module imports successfully')"
         
         # Test QR code generation with a sample URL
-        python main.py --url "https://github.com/greg-hoff/module7_IS601" --output test_qr.png
+        python main.py --url "https://github.com/greg-hoff/module7_IS601"
         
-        # Check if QR code file was created
-        if [ -f "test_qr.png" ]; then
+        # Check if QR code file was created (timestamped filename)
+        if ls QRCode_*.png 1> /dev/null 2>&1; then
           echo "QR code generation test passed"
+          ls -la QRCode_*.png
         else
           echo "QR code generation test failed"
           exit 1
