revised github actions to allow nonroot user to write to the volume in order to check for file existence after creation

--- a/.github/workflows/pr-tests.yml
+++ b/.github/workflows/pr-tests.yml
@@ -90,15 +90,19 @@ jobs:
 
     - name: Test Docker image functionality
       run: |
+        # Create test output directory with proper permissions
         mkdir -p test_output
+        chmod 777 test_output
+        
         docker run --rm -v $(pwd)/test_output:/app/qr_codes qr_codemaker:test --url "https://github.com/greg-hoff/module7_IS601"
         
         # Check if QR code was created
-        if [ -f test_output/QRCode_*.png ]; then
+        if ls test_output/QRCode_*.png 1> /dev/null 2>&1; then
           echo "✅ Docker image test passed - QR code generated"
           ls -la test_output/
         else
           echo "❌ Docker image test failed - no QR code found"
+          ls -la test_output/
           exit 1
         fi
 
