--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -87,14 +87,20 @@ jobs:
 
     - name: Test Docker image
       run: |
+        # Create test output directory with proper permissions
+        mkdir -p test_output
+        chmod 777 test_output
+        
         # Test the built image
         docker run --rm -v $(pwd)/test_output:/app/qr_codes ${{ env.DOCKER_IMAGE }}:latest --url "https://github.com/greg-hoff/module7_IS601"
         
         # Check if QR code was created in mounted directory
-        if [ -f "test_output/QRCode_"*.png ]; then
+        if ls test_output/QRCode_*.png 1> /dev/null 2>&1; then
           echo "Docker image test passed"
+          ls -la test_output/
         else
           echo "Docker image test failed"
+          ls -la test_output/
           exit 1
         fi
 
